[gd_scene load_steps=20 format=3 uid="uid://tig42hgfx32c"]

[ext_resource type="Script" uid="uid://db65erx6p0jjr" path="res://Scripts/big_limmi.gd" id="1_j5d1w"]
[ext_resource type="Texture2D" uid="uid://da3yu671cxye1" path="res://Sprites/limmi/lim-l.png" id="2_j5d1w"]
[ext_resource type="Texture2D" uid="uid://b31uy1kuu8pqj" path="res://Sprites/limmi/lim-l2.png" id="3_5qf74"]
[ext_resource type="Texture2D" uid="uid://u7qm1a7nk43i" path="res://Sprites/limmi/lim-r.png" id="4_4ab0o"]
[ext_resource type="Texture2D" uid="uid://docs0lro6embx" path="res://Sprites/limmi/lim-r2.png" id="5_rg3da"]
[ext_resource type="Script" uid="uid://4mgbf2u1mhep" path="res://Scripts/limmi-HP.gd" id="6_els07"]
[ext_resource type="Texture2D" uid="uid://baty8revcoyim" path="res://Sprites/damage-spritesheet.png" id="7_td4dg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pi1cc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j5d1w")
}, {
"duration": 1.0,
"texture": ExtResource("3_5qf74")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_4ab0o")
}, {
"duration": 1.0,
"texture": ExtResource("5_rg3da")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_11gg7"]
atlas = ExtResource("7_td4dg")
region = Rect2(0, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa8y"]
atlas = ExtResource("7_td4dg")
region = Rect2(276, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwqj"]
atlas = ExtResource("7_td4dg")
region = Rect2(552, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwi16"]
atlas = ExtResource("7_td4dg")
region = Rect2(828, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqm"]
atlas = ExtResource("7_td4dg")
region = Rect2(1104, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph33w"]
atlas = ExtResource("7_td4dg")
region = Rect2(1380, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ldla"]
atlas = ExtResource("7_td4dg")
region = Rect2(1656, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7t2e"]
atlas = ExtResource("7_td4dg")
region = Rect2(1932, 0, 276, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_vrb08"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwi16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph33w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ldla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}],
"loop": false,
"name": &"default",
"speed": 70.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvq0k"]
size = Vector2(114, 138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6u7vc"]
size = Vector2(126, 150)

[node name="limmi" type="CharacterBody2D" groups=["Enemy", "enemy-of-level", "limmi"]]
z_index = 1
script = ExtResource("1_j5d1w")

[node name="limmi" type="AnimatedSprite2D" parent="."]
modulate = Color(0.948147, 0.000568328, 0.918349, 1)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_pi1cc")
animation = &"right"

[node name="damaged" type="AnimatedSprite2D" parent="limmi"]
visible = false
modulate = Color(0, 0.6, 0.411765, 1)
position = Vector2(-0.666667, 45.3333)
scale = Vector2(0.666667, 0.666667)
sprite_frames = SubResource("SpriteFrames_vrb08")

[node name="limmi_body" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(4.5, 31.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_jvq0k")

[node name="Collision" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2(3, 21)
shape = SubResource("RectangleShape2D_6u7vc")

[node name="HP" type="RichTextLabel" parent="."]
z_index = 2
offset_left = -105.0
offset_top = -110.0
offset_right = 115.0
offset_bottom = -19.0
theme_override_colors/default_color = Color(0.999331, 0.336299, 0.271501, 1)
bbcode_enabled = true
horizontal_alignment = 1
script = ExtResource("6_els07")
metadata/_edit_use_anchors_ = true

[connection signal="send_health" from="." to="HP" method="_on_limmi_send_health"]
[connection signal="body_entered" from="Collision" to="." method="_on_collision_body_entered"]
[connection signal="body_exited" from="Collision" to="." method="_on_collision_body_exited"]
